--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,12 +1,10 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ${{values.destination.repo}}
-  {%- if values.description %}
-  description: ${{values.description | dump}}
-  {%- endif %}
+  name: swagger-api-poc
+  description: Swagger API Project
   annotations:
-    github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
+    github.com/project-slug: Naveen2Hr/swagger-api-poc
     backstage.io/techdocs-ref: dir:.
   tags:
     - java
@@ -17,121 +15,42 @@ metadata:
 spec:
   type: service
   lifecycle: experimental
-  owner: ${{values.owner | dump}}
+  owner: Naveen2Hr
   providesApis:
-    - CustomerManagement
-    - ProductManagement
-    - OrderManagement
-    - PaymentManagement
-    - DeliveryManagement
-    - E-Commerce-MVC
+    - UserManagement
   
 ---
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: CustomerManagement
-  description: ${{ values.description }}
+  name: UserManagement
+  description: Swagger API Project
   links:
     - url: http://localhost:9901/swagger-ui.html
-      title: CustomerManagement Website
+      title: UserManagement Website
       icon: dashboard
 spec:
   type: openapi
   lifecycle: experimental
-  owner: ${{values.destination.owner}}
+  owner: Naveen2Hr
   apiConsumedBy:
-    - OrderManagement
   definition:
-    $text: https://github.com/${{values.destination.owner + "/" + values.destination.repo}}/blob/master/CustomerManagement/src/main/resources/api-docs.yaml
----
-apiVersion: backstage.io/v1alpha1
-kind: API
-metadata:
-  name: DeliveryManagement
-  description: ${{ values.description }}
-  links:
-    - url: http://localhost:9901/swagger-ui.html
-      title: DeliveryManagement Website
-      icon: dashboard
-spec:
-  type: openapi
-  lifecycle: experimental
-  owner: ${{values.destination.owner}}
-  definition:
-    $text: https://github.com/${{values.destination.owner + "/" + values.destination.repo}}/blob/master/DeliveryManagement/src/main/resources/api-docs.yaml
----
-apiVersion: backstage.io/v1alpha1
-kind: API
-metadata:
-  name: E-Commerce-MVC
-  description: ${{ values.description }}
-  links:
-    - url: http://localhost:4041/mvcec/shop
-      title: E-Commerce-MVC Website
-      icon: dashboard
-spec:
-  type: openapi
-  lifecycle: experimental
-  owner: ${{values.destination.owner}}
-  definition:
-    $text: https://github.com/${{values.destination.owner + "/" + values.destination.repo}}/blob/master/E-Commerce-MVC/src/main/resources/api-docs.yaml
----
-apiVersion: backstage.io/v1alpha1
-kind: API
-metadata:
-  name: ProductManagement
-  description: ${{ values.description }}
-  links:
-    - url: http://localhost:9904/swagger-ui.html
-      title: ProductManagement Website
-      icon: dashboard
-spec:
-  type: openapi
-  lifecycle: experimental
-  owner: ${{values.destination.owner}}
-  apiConsumedBy:
-    - OrderManagement
-  definition:
-    $text: https://github.com/${{values.destination.owner + "/" + values.destination.repo}}/blob/master/ProductManagement/src/main/resources/api-docs.yaml
+    $text: https://github.com/Naveen2Hr/swagger-api-poc/blob/main/DemoProject/src/main/resources/api-docs.yaml
 
 ---
 apiVersion: backstage.io/v1alpha1
-kind: API
+kind: APICatalog
 metadata:
-  name: OrderManagement
-  description: ${{ values.description }}
-  links:
-    - url: http://localhost:9903/swagger-ui.html
-      title: OrderManagement Website
-      icon: dashboard
+  name: my-api-catalog
+  description: My API Catalog
 spec:
-  type: openapi
-  lifecycle: experimental
-  owner: ${{values.destination.owner}}
-  apiConsumedBy:
-    - PaymentManagement
-  consumesApis:
-    - CustomerManagement
-    - ProductManagement
-  definition:
-    $text: https://github.com/${{values.destination.owner + "/" + values.destination.repo}}/blob/master/OrderManagement/src/main/resources/api-docs.yaml
-
----
-apiVersion: backstage.io/v1alpha1
-kind: API
-metadata:
-  name: PaymentManagement
-  description: ${{ values.description }}
-  links:
-    - url: http://localhost:9905/swagger-ui.html
-      title: PaymentManagement Website
-      icon: dashboard
-spec:
-  type: openapi
-  lifecycle: experimental
-  owner: ${{values.destination.owner}}
-  consumesApis:
-    - OrderManagement
-  definition:
-    $text: https://github.com/${{values.destination.owner + "/" + values.destination.repo}}/blob/master/PaymentManagement/src/main/resources/api-docs.yaml
+  apis:
+    - metadata:
+        name: my-api
+        description: My Spring REST API
+        lifecycle: production
+        owner: myteam
+      spec:
+        type: openapi
+        lifecycle: production
+        path: https://github.com/Naveen2Hr/swagger-api-poc/blob/main/user-oas.yaml
