--- a/user-oas.yaml
+++ b/user-oas.yaml
@@ -1,18 +1,84 @@
-openapi: 3.0.3
-info:
-  title: My Spring REST API
-  version: 1.0.0
+openapi: 3.0.2
 servers:
-  - url: http://localhost:9901
+  - url: /v3
+info:
+  description: |-
+   The Sample User Swagger Integration
+  version: 1.0.17
+  title: Swagger User - OpenAPI 3.0
+  termsOfService: 'http://swagger.io/terms/'
+  contact:
+    email: apiteam@swagger.io
+  license:
+    name: Apache 2.0
+    url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
+tags:
+  - name: pet
+    description: Everything about your Pets
+    externalDocs:
+      description: Find out more
+      url: 'http://swagger.io'
+  - name: store
+    description: Access to User
+    externalDocs:
+      description: Find out more about our store
+      url: 'http://swagger.io'
+  - name: user
+    description: Operations about user
 paths:
-  /users/status:
-    get:
-      summary: Retrieve status
-      operationId: getStatus
+  /users/register:
+    post:
+      tags:
+        - pet
+      summary: Add a new User
+      description: Add a new User
+      operationId: addUser
       responses:
-        "200":
-          description: OK
+        '200':
+          description: Successful operation
           content:
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/User'
             application/json:
               schema:
-                type: string
+                $ref: '#/components/schemas/User'
+        '405':
+          description: Invalid input
+      security:
+        - petstore_auth:
+            - 'write:users'
+            - 'read:user'
+      requestBody:
+        description: Create a new User
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/User'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/User'
+externalDocs:
+  description: Find out more about Swagger
+  url: 'http://swagger.io'
+components:
+  schemas:
+    User:
+      x-swagger-router-model: com.naveen.entity.User
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 10
+        username:
+          type: string
+        email:
+          type: string
+      xml:
+        name: user
+      type: object
+                  
