--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,56 +1,21 @@
 apiVersion: backstage.io/v1alpha1
-kind: Component
-metadata:
-  name: swagger-api-poc
-  description: Swagger API Project
-  annotations:
-    github.com/project-slug: Naveen2Hr/swagger-api-poc
-    backstage.io/techdocs-ref: dir:.
-  tags:
-    - java
-    - springboot
-    - microservice
-    - mvc
-
-spec:
-  type: service
-  lifecycle: experimental
-  owner: Naveen2Hr
-  providesApis:
-    - UserManagement
-
----
-apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: UserManagement
-  description: Swagger API Project
+  name: user
+  description: The User API
+  tags:
+    - store
+    - rest
   links:
-    - url: http://localhost:9901/swagger-ui.html
-      title: UserManagement Website
-      icon: dashboard
+    - url: https://github.com/Naveen2Hr/swagger-api-poc
+      title: GitHub Repo
+      icon: github
+    - url: https://github.com/Naveen2Hr/swagger-api-poc/blob/main/user-oas.yaml
+      title: API Spec
+      icon: code
 spec:
   type: openapi
   lifecycle: experimental
-  owner: Naveen2Hr
-  apiConsumedBy:
+  owner: team-c
   definition:
-    $text: https://github.com/Naveen2Hr/swagger-api-poc/blob/main/DemoProject/src/main/resources/api-docs.yaml
-
----
-apiVersion: backstage.io/v1alpha1
-kind: APICatalog
-metadata:
-  name: my-api-catalog
-  description: My API Catalog
-spec:
-  apis:
-    - metadata:
-        name: my-api
-        description: My Spring REST API
-        lifecycle: production
-        owner: myteam
-      spec:
-        type: openapi
-        lifecycle: production
-        path: https://github.com/Naveen2Hr/swagger-api-poc/blob/main/user-oas.yaml
+    $text: ./petstore.oas.yaml
